Fixed horizontal overflow
Removed margin setting on flexslider navigation buttons that was causing
a 12px overflow and an ugly horizontal scrollbar.

--- a/css/style.css
+++ b/css/style.css
@@ -503,7 +503,7 @@ bottom: -40px;
 text-align: center;
 }
 .flex-control-nav li {
-margin: 0 6px;
+margin: 0;
 display: inline-block;
 zoom: 1;
 *display: inline;
